About page : update

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,49 @@
 .bg-color-1{
     background-color: #F2F9FF;
 }
+
+.bg-color-2{
+    background-color: #FFCCE1;
+}
+
+.bg-color-3{
+    background-color: #E195AB;
+}
+
+.bg-color-4{
+    background-color: #FFF5D7;
+}
+
+.text-color-1{
+    color: #F2F9FF;
+}
+
+.text-color-2{
+    color: #FFCCE1;
+}
+
+.text-color-3{
+    color: #E195AB;
+}
+
+.text-color-4{
+    color: #FFF5D7;
+}
+
+.border-color-1{
+    border-color: #F2F9FF;
+}
+
+.border-color-2{
+    border-color: #FFCCE1;
+}
+
+.border-color-3{
+    border-color: #E195AB;
+}
+
+.border-color-4{
+    border-color: #FFF5D7;
+}
+
+
